[build-system]
requires      = [
        "setuptools>=61.0.0",
        "wheel",
        ]
build-backend = "setuptools.build_meta"

[project]
name = "linchemin"
version = "1.0.1"
description = "Toolkit to create, manipulate, and query networks of Chemical Reactions and Chemicals"
license = { file = "LICENSE" }

authors = [{ name = "Marco Stenta", email = "marco.stenta@syngenta.com" },{ name = "Marta Pasquini", email = "marta.pasquini@syngenta.com" }]
readme = "README.md"

classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["reaction", "chemoinformatics", "computer-aided synthesis planning"]
requires-python = ">=3.9"
dependencies = [
        "rdkit>=2022.3",
        "rdchiral",
        "pydot",
        "networkx",
        "pandas",
        "numpy",
        "hdbscan",
        "scikit-learn",
        "joblib==1.1.0"
        ]
# TODO: newer versions of joblib create problems with hdbscan https://github.com/scikit-learn-contrib/hdbscan/issues/565

[project.optional-dependencies]
development = [
        "bumpver",
        "pytest-cov",
        "pytest",
        "sphinx"
        ]

[project.urls]
homepage = "https://linchemin.github.io"
repository = "https://github.com/syngenta/linchemin"


[project.scripts]
linchemin = "linchemin.interfaces.cli:linchemin_cli"

[tool.black]
target-version = ['py39']

[tool.bumpver]
current_version = "1.0.1"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message  = "Bump version {old_version} -> {new_version}"
commit          = true
tag             = true
push            = true

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"docs/source/conf.py" = ['version = "{version}"']

[tool.isort]
atomic = true
profile = "black"
py_version = "39"
skip_gitignore = true